# they

./: .env.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  agent.py  config.py
src/tools/: __init__.py  bash.py  edit.py  guard.py  read.py  write.py
src/tui/: __init__.py  commands.py  console.py  loop.py  prompt.py
tests/: conftest.py  test_agent.py  test_config.py  test_tools.py
